# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  25 Jun 2002; Martin Schlemmer <azarah@gentoo.org> bin/prepallstrip :
  Change "strip --strip-unneeded" to "strip --strip-debug".  This fixes
  bug #2702,#3929,#4027.

*portage-2.0.5 (24 Jun 2002)

  23 Jun 2002; Daniel Robbins <drobbins@gentoo.org> conf files: removed
  references to non-functional FTP_PROXY and HTTP_PROXY and added a note about
  how to use the correct vars (ftp_proxy and http_proxy.)  Closes bug #1664.
  Also added note about RSYNC_PROXY, closing bug #2332.

  23 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: removed
  "dependency too short" checks which weren't working and were causing deps
  like "mc" and "ed" to be rejected as invalid rather than being expanded.

  23 Jun 2002; Daniel Robbins <drobbins@gentoo.org> emerge: upgraded "clean"
  code to be more robust, consistent. Closes bug #3967.

*portage-2.0.4 (20 Jun 2002)

  20 Jun 2002; Daniel Robbins <drobbins@gentoo.org> in the 2.0.4 ebuild itself:
  added back tbz2tool symlink which was mistakenly removed.  Also changed the
  way we compile portage.py stuff so that we remove the previously compiled
  files, just in case clock skew cause them to seem more recent than they
  really are.  Python byte-code compilation moved to pkg_postinst()

  20 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed up the
  fetch() code so that invalid digests don't cause a traceback.

  20 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: some of the new
  transplanted virtuals code assumed that profiledir was set, which is not 
  required.  This code has now been fixed to not make that assumption.

*portage-2.0.3 (20 Jun 2002)

  20 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed two typos
  pointed out by stroke and g2boojum.  These fix unmerge and some aspect of
  virtuals handling, which was previously causing a traceback.