@@ -648,8 +648,6 @@ int main(int argc, char** argv)
 				strcat(sandbox_write_var, ":");
 				strcat(sandbox_write_var, "/usr/lib/cf");
 				strcat(sandbox_write_var, ":");
-				strcat(sandbox_write_var, "/var/cache/ccache");
-				strcat(sandbox_write_var, ":");
 				if (NULL == portage_tmp_dir)
 				{
 					strcat(sandbox_write_var, "/tmp/");
