@@ -5,6 +5,10 @@
   Change "strip --strip-unneeded" to "strip --strip-debug".  This fixes
   bug #2702,#3929,#4027.
 
+  24 Jun 2002; Daniel Robbins <drobbins@gentoo.org> ebuild.sh: Portage will
+  now automatically take advantage of ccache if the >=dev-util/ccache-1.9
+  ebuild is installed.  Removing /var/cache/ccache hole in the sandbox.
+
 *portage-2.0.5 (24 Jun 2002)
 
   23 Jun 2002; Daniel Robbins <drobbins@gentoo.org> conf files: removed
